# sqlite

./: .gitignore  CMakeLists.txt
cmake/: sqlite-config.cmake  sqlite3-config.cmake
